--- a/src/app/galerie/galerie.css
+++ b/src/app/galerie/galerie.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   align-items: stretch;
-  padding: 24px 45px;
+  padding: 60px 40px;
   box-sizing: border-box;
   gap: 36px;
   overflow: hidden;
